--- a/index.html
+++ b/index.html
@@ -12,34 +12,7 @@
 </head>
 <body>
     <!--Nav bar -->
-    <div class="navbar navbar-inverse">
-        <div class="navbar-header">
-            <a class="navbar-brand" id="nav-name">Chad Jakoby</a>
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a class="theme-btn-git" href="https://github.com/jakobyc" target="_blank">
-                        <i class="fa fa-lg fa-github" aria-hidden="true"></i>
-                    </a>
-                </li>
-                <li>
-                    <a class="theme-btn-linkedin" href="https://www.linkedin.com/in/chad-jakoby-084599bb" target="_blank">
-                        <i class="fa fa-lg fa-linkedin" aria-hidden="true"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <nav></nav>
 
     <!-- Content -->
     <div class="container">
@@ -94,16 +67,13 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Footer -->
-    <div id="footer">
-        <div class="container">
-            <p style="float: right">&copy; Chad Jakoby</p>
-        </div>
-    </div>
+    <footer></footer>
 </body>
 </html>
 
 <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.js" type="text/javascript"></script>
+<script src="js/layout.js" type="text/javascript"></script>
 
