--- a/index.html
+++ b/index.html
@@ -15,65 +15,66 @@
     <nav></nav>
 
     <!-- Content -->
-    <div class="container">
-        <div>
-            <h3>Who am I?</h3>
-            <div class="theme-text-area">
-                <p>
-                    I'm Chad Jakoby. I am an avid programmer, particularly in the object-oriented world. I currently work for a great company known as
-                    the Dixie Group, where I primarily do .NET development. Beyond programming, I'm also a big fan of wakeboarding, hiking, and rafting.
-                </p>
-            </div>
+    <div class="theme-content-dark">
+        <h2>Who am I?</h2>
+        <hr />
+        <p>
+            I'm Chad Jakoby. I am an avid programmer, particularly in the object-oriented world. 
+            I currently work for a great company known as the Dixie Group, where I primarily do .NET development. 
+            Beyond programming, I'm also a big fan of wakeboarding, hiking, and rafting.
+        </p>
+    </div>
+    <div class="theme-content">
+        <h2>What kind of .NET development?</h2>
+        <div class="theme-text-area">
+            <p>
+                I do full-stack web development (including REST/SOAP web services) and desktop application development:
+            </p>
+            <ul style="border: 1px solid white;">
+                <li>
+                    ASP.NET
+                    <ul>
+                        <li>MVC</li>
+                        <li>WebForms</li>
+                        <li>Web API</li>
+                    </ul>
+                </li>
+                <li>
+                    .NET
+                    <ul>
+                        <li>WinForms</li>
+                        <li>WPF</li>
+                        <li>WCF</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
-        <div>
-            <h3>What kind of .NET development?</h3>
-            <div class="theme-text-area">
-                <p>
-                    I do full-stack web development (including REST/SOAP web services) and desktop application development:
-                </p>
-                <ul style="border: 1px solid white;">
-                    <li>
-                        ASP.NET
-                        <ul>
-                            <li>MVC</li>
-                            <li>WebForms</li>
-                            <li>Web API</li>
-                        </ul>
-                    </li>
-                    <li>
-                        .NET
-                        <ul>
-                            <li>WinForms</li>
-                            <li>WPF</li>
-                            <li>WCF</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div>
-            <h3>Anything else?</h3>
-            <div class="theme-text-area">
-                <p>
-                    For my job, .NET development is a majority of my work. At home, I like to dig into various topics 
-                    and learn as much as I can from them. I'm in the process of learning Linux (Debian distro) and some Java
-                    techologies (Struts 2, Tomcat, GlassFish, J2EE).
-                </p>
-                <p>
-                    I also enjoy working on some personal projects. Several are on my <a class="btn theme-btn-git" href="https://github.com/jakobyc">GitHub</a>. Feel free
-                    to check them out and contribute.
-                </p>
-            </div>
-        </div>
+    </div>
+    <div class="theme-content-dark" style="border-bottom: 1px solid black;">
+        <h2>Anything else?</h2>
+        <hr />
+        <p>
+            For my job, .NET development is a majority of my work. At home, I like to dig into various topics
+            and learn as much as I can from them. I'm in the process of learning Linux (Debian distro) and some Java
+            techologies (Struts 2, Tomcat, GlassFish, J2EE).
+        </p>
+        <p>
+            I also enjoy working on some personal projects. Several are on my <a class="btn theme-btn-git" href="https://github.com/jakobyc">GitHub</a>. Feel free
+            to check them out and contribute.
+        </p>
     </div>
 
     <!-- Footer -->
-    <footer></footer>
+    <footer style="margin-top: -20px;"></footer>
 </body>
 </html>
 
 <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 <script src="js/layout.js" type="text/javascript"></script>
+
+<script>
+    loadLayout();
+    setActive('#navHome');
+</script>
 
