--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
     <!-- Content -->
     <div class="container">
         <h3 class="theme-content-header">Projects</h3>
-        <div class="theme-content">
+        <div>
             <ul class="list-group">
                 <li class="list-group-item theme-list-group-item">
                     <h3 class="list-group-item-heading">
@@ -78,3 +78,8 @@
 <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 <script src="js/layout.js" type="text/javascript"></script>
+
+<script>
+    loadLayout();
+    setActive('#navProjects');
+</script>
