--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
     <!--Nav bar -->
     <nav></nav>
-
+    <div style="text-align: center;">
+        <img src="content/roadrunner_spotlight_jakoby.jpg" class="image-responsive hide-mobile" />
+    </div>
+    <div style="text-align: center;">
+        <img src="content/jakoby1.jpg" class="image-responsive mobile-photos"/>
+    </div>
     <!-- Content -->
     <div class="theme-content-dark">
         <h2>Who am I?</h2>
