Dark Theme/UI adjustments

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Chad Jakoby</title>
 </head>
-<body>
+<body class="theme-background">
     <!--Nav bar -->
     <nav></nav>
     <div style="text-align: center;">
@@ -19,61 +19,64 @@
     <div style="text-align: center;">
         <img src="content/jakoby1.jpg" alt="" class="image-responsive show-mobile"/>
     </div>
-    <div id="transition-test"></div>
+    
     <!-- Content -->
-    <div class="theme-content-dark">
-        <h2>Who am I?</h2>
-        <hr />
-        <p>
-            I'm Chad Jakoby. I am an avid programmer, particularly in the object-oriented world. 
-            I currently work for a great company known as the Dixie Group, where I primarily do .NET development. 
-            Beyond programming, I'm also a big fan of wakeboarding, hiking, and rafting.
-        </p>
-    </div>
-
-    <div class="image-container">
-        <div id="hiking-parallax" class="parallax-responsive"></div>
-        <p class="image-text-bottom-left" id="hiking-parallax-caption" style="background-color: #222222; padding: 5px;">Chattanooga</p>
-    </div>
-
-    <div class="theme-content">
-        <h2>What kind of .NET development?</h2>
-        <div class="theme-text-area">
+    <br />
+    <div class="container">
+        <div class="theme-content-dark">
+            <h2>Who am I?</h2>
+            <hr />
             <p>
-                I do full-stack web development (including REST/SOAP web services) and desktop application development:
+                I'm Chad Jakoby. I am an avid programmer, particularly in the object-oriented world.
+                I currently work for a great company known as the Dixie Group, where I primarily do .NET development.
+                Beyond programming, I'm also a big fan of wakeboarding, hiking, and rafting.
             </p>
-            <ul style="border: 1px solid white;">
-                <li>
-                    ASP.NET
-                    <ul>
-                        <li>MVC</li>
-                        <li>WebForms</li>
-                        <li>Web API</li>
-                    </ul>
-                </li>
-                <li>
-                    .NET
-                    <ul>
-                        <li>WinForms</li>
-                        <li>WPF</li>
-                        <li>WCF</li>
-                    </ul>
-                </li>
-            </ul>
         </div>
-    </div>
-    <div class="theme-content-dark" style="border-bottom: 1px solid black;">
-        <h2>Anything else?</h2>
-        <hr />
-        <p>
-            For my job, .NET development is a majority of my work. At home, I like to dig into various topics
-            and learn as much as I can from them. I'm in the process of learning Linux (Debian distro) and some Java
-            techologies (Struts 2, Tomcat, GlassFish, J2EE).
-        </p>
-        <p>
-            I also enjoy working on some personal projects. Several are on my <a class="btn theme-btn-git" href="https://github.com/jakobyc">GitHub</a>. Feel free
-            to check them out and contribute.
-        </p>
+
+        <div class="image-container">
+            <div id="hiking-parallax" class="parallax-responsive"></div>
+            <p class="image-text-bottom-left" id="hiking-parallax-caption" style="background-color: #222222; padding: 5px;">Chattanooga</p>
+        </div>
+
+        <div class="theme-content-dark">
+            <h2>What kind of .NET development?</h2>
+            <div class="theme-text-area">
+                <p>
+                    I do full-stack web development (including REST/SOAP web services) and desktop application development:
+                </p>
+                <ul style="border: 1px solid white;">
+                    <li>
+                        ASP.NET
+                        <ul>
+                            <li>MVC</li>
+                            <li>WebForms</li>
+                            <li>Web API</li>
+                        </ul>
+                    </li>
+                    <li>
+                        .NET
+                        <ul>
+                            <li>WinForms</li>
+                            <li>WPF</li>
+                            <li>WCF</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="theme-content-dark" style="border-bottom: 1px solid black;">
+            <h2>Anything else?</h2>
+            <hr />
+            <p>
+                For my job, .NET development is a majority of my work. At home, I like to dig into various topics
+                and learn as much as I can from them. I'm in the process of learning Linux (Debian distro) and some Java
+                techologies (Struts 2, Tomcat, GlassFish, J2EE).
+            </p>
+            <p>
+                I also enjoy working on some personal projects. Several are on my <a class="btn theme-btn-git" href="https://github.com/jakobyc">GitHub</a>. Feel free
+                to check them out and contribute.
+            </p>
+        </div>
     </div>
 
     <!-- Footer -->
