--- a/projects.html
+++ b/projects.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <title>Project - Algorithm Repository</title>
 </head>
-<body>
+<body class="theme-background">
     <!--Nav bar -->
     <nav></nav>
 
     <!-- Breadcrumb -->
-    <div class="breadcrumb-list">
-        <a class="breadcrumb-item" href="index.html"><span class="breadcrumb-item glyphicon glyphicon-home"></span></a>
-        <span class="breadcrumb-item">/</span>
+    <div class="breadcrumb-list theme-breadcrumb-list">
+        <a class="breadcrumb-item theme-breadcrumb-item" href="index.html"><span class="breadcrumb-item glyphicon glyphicon-home"></span></a>
+        <span class="breadcrumb-item theme-breadcrumb-item">/</span>
         <span class="breadcrumb-item-active"><span>Projects</span></span>
     </div>
 
@@ -27,6 +27,17 @@
             <ul class="list-group">
                 <li class="list-group-item theme-list-group-item">
                     <h3 class="list-group-item-heading">
+                        <text>AdoWrapper</text>
+                        <span class="badge">Factory</span>
+                        <span class="badge">ADO.NET</span>
+                        <span class="badge">C#</span>
+                    </h3>
+                    <p class="list-group-item-text theme-list-group-item-text">
+                        <a class="btn theme-btn-git" href="https://github.com/jakobyc/AdoWrapper" target="_blank">GitHub</a>
+                    </p>
+                </li>
+                <li class="list-group-item theme-list-group-item">
+                    <h3 class="list-group-item-heading">
                         <text>Algorithms Repository</text>
                         <span class="badge">Strategy</span>
                         <span class="badge">MVC</span>
@@ -34,6 +45,17 @@
                     </h3>
                     <p class="list-group-item-text theme-list-group-item-text">
                         <a class="btn theme-btn-git" href="https://github.com/jakobyc/Algorithms_Repository" target="_blank">GitHub</a>
+                    </p>
+                </li>
+                <li class="list-group-item theme-list-group-item">
+                    <h3 class="list-group-item-heading">
+                        <text>DiscordFlat</text>
+                        <span class="badge">API</span>
+                        <span class="badge">Discord</span>
+                        <span class="badge">C#</span>
+                    </h3>
+                    <p class="list-group-item-text theme-list-group-item-text">
+                        <a class="btn theme-btn-git" href="https://github.com/jakobyc/DiscordFlat" target="_blank">GitHub</a>
                     </p>
                 </li>
                 <li class="list-group-item theme-list-group-item">
