--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/master.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-    <title>Project - Algorithm Repository</title>
+    <title>Projects</title>
 </head>
 <body class="theme-background">
     <!--Nav bar -->
