--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="image-container">
             <div id="hiking-parallax" class="parallax-responsive"></div>
-            <p class="image-text-bottom-left" id="hiking-parallax-caption" style="background-color: #222222; padding: 5px;">Chattanooga</p>
+            <p class="image-text-bottom-wide" id="hiking-parallax-caption" style="background: rgba(0, 0, 0, 0.50); padding: 20px; font-size: 24px;">Chattanooga</p>
         </div>
 
         <div class="theme-content-dark">
@@ -67,13 +67,13 @@
         <div class="theme-content-dark" style="border-bottom: 1px solid black;">
             <h2>Anything else?</h2>
             <hr />
-            <p>
+            <!--<p>
                 For my job, .NET development is a majority of my work. At home, I like to dig into various topics
                 and learn as much as I can from them. I'm in the process of learning Linux (Debian distro) and some Java
                 techologies (Struts 2, Tomcat, GlassFish, J2EE).
-            </p>
+            </p>-->
             <p>
-                I also enjoy working on some personal projects. Several are on my <a class="btn theme-btn-git" href="https://github.com/jakobyc">GitHub</a>. Feel free
+                I enjoy working on some personal projects. Several are on my <a class="btn theme-btn-git" href="https://github.com/jakobyc">GitHub</a>. Feel free
                 to check them out and contribute.
             </p>
         </div>
