--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,7 @@
                     </h3>
                     <p class="list-group-item-text theme-list-group-item-text">
                         <a class="btn theme-btn-git" href="https://github.com/jakobyc/AdoWrapper" target="_blank">GitHub</a>
+                        <a class="btn theme-btn-docs" href="AdoWrapper.html">Documentation</a>
                     </p>
                 </li>
                 <li class="list-group-item theme-list-group-item">
