Documentation/GitHub REST API

--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,7 @@
                     </h3>
                     <p class="list-group-item-text theme-list-group-item-text">
                         <a class="btn theme-btn-git" href="https://github.com/jakobyc/DiscordFlat" target="_blank">GitHub</a>
+                        <a class="btn theme-btn-docs" href="DiscordFlat.html">Documentation</a>
                     </p>
                 </li>
                 <li class="list-group-item theme-list-group-item">
