--- a/AdoWrapper.html
+++ b/AdoWrapper.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
@@ -8,12 +8,21 @@
     <link rel="stylesheet" type="text/css" href="css/master.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 
-    <title>Chad Jakoby</title>
+    <title>AdoWrapper</title>
 </head>
 <body class="theme-background">
     <!--Nav bar -->
     <nav></nav>
-    <br />
+
+    <!-- Breadcrumb -->
+    <div class="breadcrumb-list theme-breadcrumb-list">
+        <a class="breadcrumb-item theme-breadcrumb-item" href="index.html"><span class="breadcrumb-item glyphicon glyphicon-home"></span></a>
+        <span class="breadcrumb-item theme-breadcrumb-item">/</span>
+        <a class="breadcrumb-item theme-breadcrumb-item" href="projects.html"><span>Projects</span></a>
+        <span class="breadcrumb-item theme-breadcrumb-item">/</span>
+        <span class="breadcrumb-item-active"><span>AdoWrapper</span></span>
+    </div>
+
     <div class="container">
         <h1 class="theme-header">AdoWrapper Documentation</h1>
         <div class="">
@@ -35,33 +44,34 @@
                         <hr />
                         <h3>SQL Server Example:</h3>
                         <div class="code-box">
-                        <p>public TestRepository : SqlRepository
-                            {
-                                &emsp;public TestRepository() : base("ConnectionStringName") { }
+                            <p>
+                                public TestRepository : SqlRepository
+                                {
+                                <span class="tabbing"></span>public TestRepository() : base("ConnectionStringName") { }
 
-                                &emsp;// Without parameters:
-                                &emsp;public DataTable GetUsers()
-                                &emsp;{
-                                &emsp;&emsp;return GetDataTable("SELECT * FROM Users");
-                                &emsp;}
+                                <span class="tabbing"></span>// Without parameters:
+                                <span class="tabbing"></span>public DataTable GetUsers()
+                                <span class="tabbing"></span>{
+                                <span class="tabbing-2"></span>return GetDataTable("SELECT * FROM Users");
+                                <span class="tabbing"></span>}
 
-                                &emsp;// With parameters:
-                                &emsp;public DataTable GetUser(string name)
-                                &emsp;{
-                                &emsp;&emsp;IDictionary&lt;string, object&gt; parameters = new Dictionary&lt;string, object&gt;()
-                                &emsp;&emsp;{
-                                &emsp;&emsp;&emsp;{ "@id", id },
-                                &emsp;&emsp;&emsp;{ "@name", name },
-                                &emsp;&emsp;&emsp;{ "@email", email }
-                                &emsp;&emsp;};
-                                &emsp;&emsp;return GetDataTable(@"
-                                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;SELECT *
-                                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;FROM Users
-                                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;WHERE Id = @id
-                                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;AND Name = @name
-                                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;AND Email = @email", parameters);
-                                &emsp;}
-                            }
+                                <span class="tabbing"></span>// With parameters:
+                                <span class="tabbing"></span>public DataTable GetUser(string name)
+                                <span class="tabbing"></span>{
+                                <span class="tabbing-2"></span>IDictionary&lt;string, object&gt; parameters = new Dictionary&lt;string, object&gt;()
+                                <span class="tabbing-2"></span>{
+                                <span class="tabbing-3"></span>{ "@id", id },
+                                <span class="tabbing-3"></span>{ "@name", name },
+                                <span class="tabbing-3"></span>{ "@email", email }
+                                <span class="tabbing-2"></span>};
+                                <span class="tabbing-2"></span>return GetDataTable(@"
+                                <span class="tabbing-5"></span>SELECT *
+                                <span class="tabbing-5"></span>FROM Users
+                                <span class="tabbing-5"></span>WHERE Id = @id
+                                <span class="tabbing-5"></span>AND Name = @name
+                                <span class="tabbing-5"></span>AND Email = @email", parameters);
+                                <span class="tabbing"></span>}
+                                }
                             </p>
                         </div>
                     </div>
@@ -71,57 +81,59 @@
                     <hr />
                     <h3>With mapping:</h3>
                     <div class="code-box">
-                        <p>// DTO:
+                        <p>
+                            // DTO:
                             public class User
                             {
-                            &nbsp;[Column("Id")]
-                            &nbsp;public string Id { get; set; }
-                            &nbsp;[Column("Name")]
-                            &nbsp;public string DisplayName { get; set; }
-                            &nbsp;[Column("Email")]
-                            &nbsp;public string Email { get; set; }
+                            <span class="tabbing"></span>[Column("Id")]
+                            <span class="tabbing"></span>public string Id { get; set; }
+                            <span class="tabbing"></span>[Column("Name")]
+                            <span class="tabbing"></span>public string DisplayName { get; set; }
+                            <span class="tabbing"></span>[Column("Email")]
+                            <span class="tabbing"></span>public string Email { get; set; }
 
-                            &nbsp;[Column("Confirmed")]
-                            &nbsp;public bool EmailConfirmed { get; set; }
+                            <span class="tabbing"></span>[Column("Confirmed")]
+                            <span class="tabbing"></span>public bool EmailConfirmed { get; set; }
 
-                            &nbsp;[Column("JoinedOn")]
-                            &nbsp;public DateTime JoinedDate { get; set; }
+                            <span class="tabbing"></span>[Column("JoinedOn")]
+                            <span class="tabbing"></span>public DateTime JoinedDate { get; set; }
                             }
 
                             public ICollection&lt;User&gt; GetUsers()
                             {
-                            &nbsp;return Execute&lt;User&gt;("SELECT * FROM Users");
+                            <span class="tabbing"></span>return Execute&lt;User&gt;("SELECT * FROM Users");
                             }
                         </p>
                     </div>
                     <h3>Without mapping:</h3>
                     <div class="code-box">
-                        <p>public ICollection&lt;User&gt; GetUsers()
+                        <p>
+                            public ICollection&lt;User&gt; GetUsers()
                             {
-                            &nbsp;ICollection&lt;User&gt; users = new List&lt;User&gt;();
+                            <span class="tabbing"></span>ICollection&lt;User&gt; users = new List&lt;User&gt;();
 
-                            &nbsp;using (IDbConnection connection = CreateConnection())
-                            &nbsp;{
-                            &nbsp;&nbsp;using (IDbCommand command = CreateCommand(connection, "SELECT * FROM Users"))
-                            &nbsp;&nbsp; {
-                            &nbsp;&nbsp;&nbsp;using (IDataReader reader = command.ExecuteReader())
-                            &nbsp;&nbsp;&nbsp;{
-                            &nbsp;&nbsp;&nbsp;&nbsp;while (reader.Read())
-                            &nbsp;&nbsp;&nbsp;&nbsp;{
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// Mapping logic:
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;User user = new User();
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;user.Id = reader["Id"].ToString();
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;user.DisplayName = reader["Name"].ToString();
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;user.Email = reader["Email"].ToString();
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;user.EmailConfirmed = Convert.ToBoolean(reader["Confirmed"]);
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;user.JoinedDate = Convert.ToDateTime(reader["JoinedOn"]);
+                            <span class="tabbing"></span>using (IDbConnection connection = CreateConnection())
+                            <span class="tabbing"></span>{
+                            <span class="tabbing-2"></span>using (IDbCommand command = CreateCommand(connection, "SELECT * FROM Users"))
+                            <span class="tabbing-2"></span>{
+                            <span class="tabbing-3"></span>using (IDataReader reader = command.ExecuteReader())
+                            <span class="tabbing-3"></span>{
+                            <span class="tabbing-4"></span>while (reader.Read())
+                            <span class="tabbing-4"></span>{
+                            <span class="tabbing-5"></span>// Mapping logic:
+                            <span class="tabbing-5"></span>User user = new User();
+                            <span class="tabbing-5"></span>user.Id = reader["Id"].ToString();
+                            <span class="tabbing-5"></span>user.DisplayName = reader["Name"].ToString();
+                            <span class="tabbing-5"></span>user.Email = reader["Email"].ToString();
+                            <span class="tabbing-5"></span>user.EmailConfirmed = Convert.ToBoolean(reader["Confirmed"]);
+                            <span class="tabbing-5"></span>user.JoinedDate = Convert.ToDateTime(reader["JoinedOn"]);
 
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;users.Add(user);
-                            &nbsp;&nbsp;&nbsp;&nbsp;}
-                            &nbsp;&nbsp;&nbsp;}
-                            &nbsp;&nbsp;}
-                            &nbsp;}
-                            &nbsp;return users;
+                            <span class="tabbing-5"></span>users.Add(user);
+                            <span class="tabbing-4"></span>}
+                            <span class="tabbing-3"></span>}
+                            <span class="tabbing-2"></span>}
+                            <span class="tabbing"></span>}
+                            <span class="tabbing"></span>return users;
                             }
                         </p>
                     </div>
@@ -130,20 +142,46 @@
                     <h2>Non-queries</h2>
                     <hr />
                     <div class="code-box">
-                        <p style="white-space: pre-line;">
+                        <p>
                             public int AddUser(string name, string email)
                             {
-                            &nbsp;IDictionary&lt;string, object&gt; parameters = new Dictionary&lt;string, object&gt;()
-                            &nbsp;{
-                            &nbsp;&nbsp;{ "@name", name },
-                            &nbsp;&nbsp;{ "@email", email }
-                            &nbsp;};
-                            &nbsp;return ExecuteNonQuery(@"
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INSERT INTO Users (DisplayName, Email)
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VALUES (@name, @email)", parameters);
+                            <span class="tabbing"></span>IDictionary&lt;string, object&gt; parameters = new Dictionary&lt;string, object&gt;()
+                            <span class="tabbing"></span>{
+                            <span class="tabbing-2"></span>{ "@name", name },
+                            <span class="tabbing-2"></span>{ "@email", email }
+                            <span class="tabbing"></span>};
+                            <span class="tabbing"></span>return ExecuteNonQuery(@"
+                            <span class="tabbing-5"></span>INSERT INTO Users (DisplayName, Email)
+                            <span class="tabbing-5"></span>VALUES (@name, @email)", parameters);
                             }
                         </p>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Git stats: -->
+        <div class="theme-content-dark">
+            <h2>GitHub Stats:</h2>
+            <div>
+                <div>
+                    <label><span class="glyphicon glyphicon-link"></span> Url:</label>
+                    <span id="url"></span>
+                </div>
+
+                <div>
+                    <label><span class="glyphicon glyphicon-book"></span> Description:</label>
+                    <span id="description"></span>
+                </div>
+
+                <div>
+                    <label><span class="glyphicon glyphicon-text-background"></span> Language:</label>
+                    <span id="language"></span>
+                </div>
+
+                <div>
+                    <label><span class="glyphicon glyphicon-calendar"></span> Creation Date:</label>
+                    <span id="creation-date"></span>
                 </div>
             </div>
         </div>
@@ -161,5 +199,23 @@
 <script>
     loadLayout();
     setActive('#navProjects');
+
+    $(document).ready(function ()
+    {
+        $.getJSON('https://api.github.com/users/jakobyc/repos', function (data)
+        {
+                $.each(data, function ()
+                {
+                    if (this.id == '115161641')
+                    {
+                        $('#url').text(this.url);
+                        $('#description').text(this.description);
+                        $('#language').text(this.language);
+                        $('#creation-date').text(this.created_at)
+                    }
+                });
+
+            });
+        });
 </script>
 
